--- a/yolo_v8_object_detection.ipynb
+++ b/yolo_v8_object_detection.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +292,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "image 1/1 /config/workspace/Yolo_v8_Custom_Object_Detection/download.jpg: 384x640 1 car, 1 truck, 55.6ms\n",
-      "Speed: 0.8ms preprocess, 55.6ms inference, 1.6ms postprocess per image at shape (1, 3, 640, 640)\n"
+      "image 1/1 /config/workspace/Yolo_v8_Custom_Object_Detection/image_carla.png: 384x640 1 person, 1 car, 2 tvs, 1 laptop, 68.7ms\n",
+      "Speed: 0.6ms preprocess, 68.7ms inference, 1.3ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "Results saved to \u001b[1mruns/detect/predict3\u001b[0m\n",
+      "1 label saved to runs/detect/predict3/labels\n"
      ]
     }
    ],
@@ -303,8 +305,8 @@
     "# Load a model\n",
     "model = YOLO('yolov8n.pt')  # load an official model\n",
     "\n",
-    "# Predict with the model\n",
-    "results = model('/config/workspace/Yolo_v8_Custom_Object_Detection/download.jpg')  # predict on an image"
+    "# Predict with the model  \n",
+    "results = model.predict('/config/workspace/Yolo_v8_Custom_Object_Detection/image_carla.png', save=True, save_txt=True) "
    ]
   },
   {
